<resources>

    <string name="facebook_app_id">167918773753177</string>
    <string name="fb_login_protocol_scheme">fb167918773753177</string>
    <string name="gg_web_client_id">532468520339-jqlkqmprq22l3s2duj9so3r4pg55ej7c.apps.googleusercontent.com</string>
    <string name="gg_direct_api_key">AIzaSyDMQ7SIMMaCQ1qjPDwNbSO5MEp7lu2-ctg</string>

    <string name="app_name">Phượt thủ</string>
    <string name="btnLoginFB">Đăng nhập bằng Facebook</string>
    <string name="btnLoginGG">Đăng nhập bằng Google+</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tabNewsFeed">Bài mới</string>
    <string name="tabPopulate">Nổi bật</string>
    <string name="tabLocation">Địa danh</string>
    <string name="tabMyPosted">Bài tôi</string>
    <string name="hintSearch">Bạn muốn đi đâu?</string>

    <string name="navigation_place">Khám phá</string>
    <string name="navigation_add">Bài mới</string>
    <string name="navigation_search">Tìm kiếm</string>
    <string name="navigation_fav">Yêu thích</string>
    <string name="navigation_notifications">Thông báo</string>

    <string name="action_logout">Đăng xuất</string>
    <string name="action_search">Tìm kiếm</string>

    <string name="action_place_add">Thêm</string>
    <string name="action_place_edit">Cập nhật</string>

    <string name="tvItemNewsLike">lượt thích</string>
    <string name="tvItemNewsComment">nhận xét</string>
    <string name="tvItemNewsShare">chia sẽ</string>
    <string name="symbolDot">•</string>

    <string name="btnItemNewsLike">Thích</string>
    <string name="btnItemNewsComment">Nhận xét</string>
    <string name="btnItemNewsShare">Chia sẽ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="tvAddNewPlaceLocationPickup">Chọn khu vực</string>
    <string name="tvAddNewPlaceChooseLocationTitle">Chọn địa điểm</string>
    <string name="hintEdAddNewPlaceAddress">Địa chỉ địa điểm</string>
    <string name="hintEdAddNewPlacePhone">Số điện thoại</string>
    <string name="hintEdAddNewPlaceDescription">Mô tả địa điểm</string>
    <string name="hintEdAddNewPlaceName">Tên địa điểm</string>
    <string name="hintEdPlaceCommentBody">Viết nhận xét...</string>

    <string name="msgRequestPermission">Vui lòng cấp phép truy cập</string>
    <string name="msgRequestGrant">Cấp phép</string>
    <string name="msgSuccessInsertedForPlace">Thông tin địa điểm đã được thêm!</string>
    <string name="msgSuccessInsertedForComment">Đã trả lời bài viết!</string>
    <string name="msgSuccessBookmarkSaved">Đã đánh dấu địa điểm</string>
    <string name="msgLoading">Đang xử lý thông tin...</string>
    <string name="msgUnableLoadImage">Không thể tải hình ảnh</string>
    <string name="msgTitleDeletePlace">Xóa địa điểm</string>
    <string name="msgConfirmDelete">Bạn thật sự muốn xóa?</string>
    <string name="msgPositiveButton">Chắc chắn</string>
    <string name="msgNegativeButton">Không</string>

    <string name="msgErrorInputRequired">Không được trống</string>
    <string name="msgErrorLocationPickupRequired">Chưa chọn khu vực</string>
    <string name="msgErrorMapPickupRequired">Chưa chọn vị trí bản đồ</string>
    <string name="msgErrorImagePickupRequest">Chưa chọn hình ảnh</string>

    <string name="titleChooseImage">Chọn hình ảnh</string>

    <string name="tvPlaceDetailAddressTitle">Thông tin liên lạc</string>
    <string name="tvPlaceDetailDescriptionTitle">Mô tả địa điểm</string>
    <string name="tvPlaceDetailDistance">Khoảng cách</string>
    <string name="tvPlaceDetailDuration">Thời gian</string>
    <string name="title_activity_search_place">SearchPlaceActivity</string>



</resources>
